--- a/Mobile App/SmartPool/app/src/main/res/layout/content_smart.xml
+++ b/Mobile App/SmartPool/app/src/main/res/layout/content_smart.xml
@@ -7,16 +7,32 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="@drawable/ic_highway"
     tools:showIn="@layout/app_bar_smart" tools:context=".SmartActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <ProgressBar
-        android:id="@+id/pbHeaderProgress"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
-    </ProgressBar>
+        android:text="TEST"
+        android:id="@+id/btn_test"
+        android:layout_alignParentTop="true"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Join Ride"
+            android:id="@+id/btn_join"
+            android:layout_weight="1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Offer Ride"
+            android:id="@+id/btn_offer"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </RelativeLayout>
