--- a/Mobile App/SmartPool/app/src/main/res/layout/nav_header_smart.xml
+++ b/Mobile App/SmartPool/app/src/main/res/layout/nav_header_smart.xml
@@ -11,13 +11,12 @@
 
     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" android:id="@+id/imageView" />
-
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/ic_photo" android:id="@+id/imageView" />
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="android.studio@android.com" android:id="@+id/textView" />
+        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Rohan DS"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
