--- a/Mobile App/SmartPool/app/src/main/res/menu/activity_smart_drawer.xml
+++ b/Mobile App/SmartPool/app/src/main/res/menu/activity_smart_drawer.xml
@@ -2,23 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:id="@+id/nav_profile" android:icon="@drawable/ic_profile"
+            android:title="My Profile" />
+        <item android:id="@+id/nav_offer" android:icon="@drawable/ic_carpool"
+            android:title="Offer Ride" />
+        <item android:id="@+id/nav_join" android:icon="@drawable/ic_carpool"
+            android:title="Join Ride" />
+        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
+            android:title="Settings" />
+        <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
+            android:title="Share" />
+        <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_directions"
+            android:title="Logout" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+
 
 </menu>
