--- a/Mobile App/SmartPool/app/src/main/res/layout/content_smart.xml
+++ b/Mobile App/SmartPool/app/src/main/res/layout/content_smart.xml
@@ -4,10 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:id="@+id/main"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:background="@drawable/ic_highway"
+    android:background="@drawable/ic_high"
     tools:showIn="@layout/app_bar_smart" tools:context=".SmartActivity">
 
 
